# purdue-af

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .readthedocs.yaml  .sops.yaml  README.md  RELEASING.md  af-shared-storage.yaml  codecov.yml  ruff.toml
.codex/: CI_PLAN.md
.github/: renovate.json5
JupyterHub/: helm-upgrade.sh  login.html  values.yaml
Monitoring/: deploy-dev.sh  prometheus.yaml
agc-smoke-test/: Dockerfile  smoke-test-cronjob.yaml  stop_dask_cluster.py
apps/: README.md  conda-envs-pvc.yaml
apps/jupyterhub/tests/: conftest.py  pyproject.toml  test_custom_spawner.py  test_set_user_info.py  test_sync_userlist.py
cvmfs/: cvmfs-pvc.yaml
dask-gateway/: config-hats.yaml  config-k8s-slurm.yaml  config-k8s.yaml  config.yaml  install-hats.sh  install-k8s-slurm.sh  install-k8s.sh  install.sh  kustomize  kustomize-hats  kustomize-k8s  kustomize-k8s-slurm
dask-kubernetes/: install.sh  rbac.yaml
deploy/: README.md  enable-sops.sh
docker/: REGISTRY.md
docker/agentic-interface/: Dockerfile  auth.py  context.py  metrics.py  purdue-af-agentic-interface.skill.md  pyproject.toml  requirements.in  requirements.txt  server.py
docker/agentic-interface/tests/: conftest.py  test_auth.py  test_mcp_contract.py  test_tools_connect.py  test_tools_dask.py  test_tools_logs.py  test_tools_profiles.py  test_tools_prompts.py  test_tools_session.py  test_tools_storage.py
docker/agentic-interface/tools/: connect.py  dask.py  elicitation.py  gpu.py  logs.py  profiles.py  prompts.py  session.py  storage.py
docs/: requirements.txt  zensical.toml
docs-md/: .gitignore  zensical.toml
docs-md-alt/: zensical.toml
docs-old/: zensical.toml
flux/: enable-sops.sh  flux-secret.yaml  git-repository-dev.yaml  git-repository-prod.yaml  git-repository.yaml  kustomization-dask-gateway-flux.yaml  kustomization-dev.yaml  kustomization-flux.yaml  kustomization-prod.yaml
flux_apps/: cvmfs-pvc.yaml
git-hooks/: pre-commit
infrastructure/: conda-envs-pvc.yaml
jupyterhub/: helm-upgrade-dev.sh  secrets-template.yaml  (+7 more)
tests/: common.py  conftest.py  pyproject.toml
tests/agentic_interface/: agentic_helpers.py  conftest.py  test_auth.py  test_mcp_contract.py  test_metrics.py  test_middleware.py  test_skill.py  test_skill_sync.py  test_tools_connect.py  test_tools_dask.py  test_tools_elicitation.py  test_tools_gpu.py  test_tools_logs.py  test_tools_profiles.py  test_tools_prompts.py  test_tools_session.py  test_tools_storage.py
tests/e2e_hub/: README.md  conftest.py  mock-cilogon.py  mock-cilogon.yaml  mock-ldap-acl.ldif  mock-ldap-users.ldif  mock-ldap.yaml  setup-kind.sh  test_hub_e2e.py  values-kind.yaml
tests/exporters/: conftest.py  exporter_helpers.py  pyproject.toml  test_metrics_server.py  test_node_healthcheck.py  test_node_monitor.py  test_pod_metrics_exporter.py
tests/fixtures/container_smoke/: matrix.json
tests/fixtures/monitoring/: event_rate_cases.json
tests/fixtures/node_health/: checksum_cases.json
tests/image_report/: conftest.py  test_analyze_image_build.py
tests/integration/: common.py  test_container_smoke_matrix.py  test_monitoring_metric_update.py  test_node_healthcheck_integration.py
tests/jupyterhub_config/: conftest.py  hub_helpers.py  test_cull_gpu_sessions.py  test_custom_spawner.py  test_custom_spawner_refresh.py  test_gpu_availability.py  test_set_user_info.py  test_sync_userlist.py
tests/scripts/: conftest.py  pyproject.toml  script_helpers.py  test_bump_af_version.py  test_bump_aux_image.py  test_jupyter_server_config.py  test_plot_af_users.py  test_sync_global_env.py
tests/unit/: test_docker_healthcheck.py  test_metrics_server.py  test_node_healthcheck.py  test_pod_metrics_exporter.py
(+1066 files in other folders)
