[project]
name = "purdue-af-tests"
version = "0.0.0"
description = "Single test project for all Purdue AF suites (tests/<suite>/)"
requires-python = ">=3.12"
dependencies = [
    # test tooling
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "asgi-lifespan>=2.1",
    # runtime deps of the sources under test
    "mcp[cli]>=1.3.0", # agentic-interface
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "oauthenticator>=17.0", # jupyterhub extraFiles
    "tornado>=6.4",
    "prometheus_client>=0.22", # exporters
    "matplotlib>=3.9", # plot-af-users cron
    "pandas>=2.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
