[project]
name = "purdue-af-agentic-interface"
version = "0.1.0"
description = "Purdue AF Agentic Interface — JupyterHub Service MCP server"
requires-python = ">=3.11"
# Single source of truth for dependencies; uv.lock pins the full tree
# (used by both the Docker image and the test environment).
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "kubernetes>=29.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]

[tool.uv]
# Flat application (server.py + tools/), not an installable package.
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
