[project]
name = "purdue-af-agentic-interface"
version = "0.1.0"
description = "Purdue AF Agentic Interface — JupyterHub Service MCP server"
requires-python = ">=3.12"
# Runtime dependencies; uv.lock pins the full tree for the Docker image.
# (Tests live in tests/ with their own project.)
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.22.0",
]


[tool.uv]
# Flat application (server.py + tools/), not an installable package.
package = false
