[project]
name = "purdue-af-exporter-tests"
version = "0.0.0"
description = "Tests for the Prometheus exporters (af-pod-monitor, af-node-monitor, af-monitoring)"
requires-python = ">=3.11"
dependencies = [
    "prometheus_client>=0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["."]
