[project]
name = "purdue-af-jupyterhub-config-tests"
version = "0.0.0"
description = "Tests for the JupyterHub extraFiles config snippets"
requires-python = ">=3.11"
# oauthenticator pulls in jupyterhub — the same base classes the hub uses.
# ldap3 is faked in tests (no live LDAP), so it is not a dependency here.
dependencies = [
    "oauthenticator>=17.0",
    "tornado>=6.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
